--- a/LAKAPSAGAP.BlazorServer/Pages/Requesting/RequestingForm.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Requesting/RequestingForm.razor
@@ -218,7 +218,7 @@
 			</RadzenStack>
 			<RadzenStack Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.End">
 				<RadzenButton Click="Cancel" Text="Cancel" ButtonType="ButtonType.Button" ButtonStyle="ButtonStyle.Dark" Variant="Variant.Outlined" />
-				<RadzenButton Text="Submit" ButtonType="ButtonType.Submit" ButtonStyle="ButtonStyle.Primary" />
+				<RadzenButton Text="Submit" IsBusy="_isBusy" BusyText="Submitting" ButtonType="ButtonType.Submit" ButtonStyle="ButtonStyle.Primary" />
 			</RadzenStack>
 		</RadzenStack>
 	</RadzenTemplateForm>
