--- a/LAKAPSAGAP.BlazorServer/Pages/Kits/Kits.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Kits/Kits.razor
@@ -28,8 +28,8 @@
 
 				<div class="w-100 d-flex flex-row gap-4 justify-content-between align-items-end text-success">
 					<div>
-						<span class="fw-bold rz-color-base-800 fs-4 me-2">Stock Management</span>
-						<span class="fw-bold rz-background-color-success-lighter rz-border-radius-2 rz-color-success fs-6 px-2 py-1">1000 available</span>
+						<span class="fw-bold rz-color-base-800 fs-4 me-2">Kits Management</span>
+						@* <span class="fw-bold rz-background-color-success-lighter rz-border-radius-2 rz-color-success fs-6 px-2 py-1">1000 available</span> *@
 					</div>
 					<div>
 						<RadzenButton Visible="@(currentTab == 0)" Click="ShowKitTypeCreateDialog" Icon="add" Text="Add Kit Type" ButtonStyle="ButtonStyle.Success"
