fix: Rename Field to Vehicle Plate No

--- a/LAKAPSAGAP.BlazorServer/Pages/Stocks/ReceiveStockForm.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Stocks/ReceiveStockForm.razor
@@ -28,7 +28,7 @@
 			<RadzenText Text="Delivery Details" TextStyle="TextStyle.DisplayH6" class="rz-color-success-light rz-m-0 rz-p-0 rz-w-100 fw-bold" />
 			<RadzenStack Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.SpaceBetween" class="rz-w-100">
 				<RadzenStack Gap="5px" class="rz-w-100">
-					<RadzenLabel Text="TRUCK PLATE NO." Component="plate-no" class="fw-bold" />
+					<RadzenLabel Text="VEHICLE PLATE NO." Component="plate-no" class="fw-bold" />
 					<RadzenTextBox @bind-Value=@_newReceivedRelief.PlateNo Name="plate-no" class="rz-w-100" />
 					<RadzenRequiredValidator Component="plate-no" Text="Required" />
 				</RadzenStack>
