fix: Removal of User Creation FIle Uploads

--- a/LAKAPSAGAP.BlazorServer/Pages/UserManagement/UsersView.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/UserManagement/UsersView.razor
@@ -58,7 +58,7 @@
 				<p>@userData.LastModifiedBy</p>
 			</div>
 		</div>
-		<div class="row w-100 d-flex flex-column gap-2">
+		@* <div class="row w-100 d-flex flex-column gap-2">
 
 			<p class="fw-bold text-uppercase mb-1">Valid ID/s</p>
 
@@ -75,7 +75,7 @@
 			}
 
 
-		</div>
+		</div> *@
 		<div class="d-flex align-items-center justify-content-end mt-3 gap-2 w-100">
 			<RadzenButton Style="width: fit-content;" Text="Return" Click="() => dialogService.Close(false)" ButtonStyle="ButtonStyle.Base" />
 		</div>
