--- a/LAKAPSAGAP.BlazorServer/Pages/UserManagement/UsersCreateUpdate.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/UserManagement/UsersCreateUpdate.razor
@@ -80,7 +80,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="row w-100 d-flex flex-column gap-2">
+		@* <div class="row w-100 d-flex flex-column gap-2">
 
 			<p class="fw-bold text-uppercase mb-1">@(String.IsNullOrEmpty(model.Id) ? "Upload Valid ID/s" : "Manage Valid ID/s")</p>
 
@@ -110,7 +110,7 @@
 			}
 
 
-		</div>
+		</div> *@
 		<div class="d-flex align-items-center justify-content-end mt-3 gap-2">
 			<RadzenButton Style="width: fit-content;" Text="Cancel" Click="() => dialogService.Close(false)" ButtonStyle="ButtonStyle.Danger" />
 			<RadzenButton ButtonType="ButtonType.Submit" Style="width: fit-content;" Text="@(String.IsNullOrEmpty(model.Id) ? " Add User" : $"Update User")" ButtonStyle="ButtonStyle.Primary" />
